# WireNose

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
tests/: conftest.py  test_capture.py  test_cli.py  test_config.py  test_dashboard.py  test_detectors.py  test_export.py  test_models.py  test_report.py
tests/fixtures/: generate_fixtures.py  sample.pcap  threats.pcap
wirenose/: __main__.py  capture.py  cli.py  config.py  dashboard.py  errors.py  export.py  models.py  output.py  report.py
wirenose/detectors/: __init__.py  arp_spoof.py  cleartext_creds.py  dns_tunnel.py  engine.py  icmp_anomaly.py  models.py  port_scan.py  syn_flood.py
